--- a/content/posts/2011-04-01-google-1.en.md
+++ b/content/posts/2011-04-01-google-1.en.md
@@ -16,27 +16,14 @@ Google will show +1 buttons next to all search results and ads, while encouragin
 
 &#8220;+1 is the digital shorthand for &#8216;this is pretty cool.' To recommend something, all you have to do is click +1 on a webpage or ad you find useful. These +1's will then start appearing in Google's search results,&#8221; [explains Google](http://googleblog.blogspot.com/2011/03/1s-right-recommendations-right-when-you.html).
 
-[<img title="google-plus-one" border="0" alt="google-plus-one" src="http://lh4.ggpht.com/_vaUVXcmC3OI/TZXvj8jL5MI/AAAAAAAADzA/oDW8oQnxkR4/google-plus-one_thumb%5B1%5D.png?imgmax=800" width="504" height="99" />](http://lh3.ggpht.com/_vaUVXcmC3OI/TZXvh1yWm_I/AAAAAAAADy8/C_ilIos0yv0/s1600-h/google-plus-one%5B3%5D.png)
+![](http://lh3.ggpht.com/_vaUVXcmC3OI/TZXvh1yWm_I/AAAAAAAADy8/C_ilIos0yv0/s1600-h/google-plus-one%5B3%5D.png)
 
 This feature is slowly rolled out to Google.com, but you can try it by enabling the [+1 search experiment](http://www.google.com/experimental/index.html).
 
-<div>
-  <div>
-    <div>
-      <a href="http://www.youtube.com/watch?v=OAyUNI3_V2c" target="_new"><img src="http://lh6.ggpht.com/_vaUVXcmC3OI/TZXvlFf0XDI/AAAAAAAADzE/aaRLyApOsyI/video461c9932dfe2%5B7%5D.jpg?imgmax=800" galleryimg="no" onload="var downlevelDiv = document.getElementById('1a68dfb2-253e-4479-8544-81808b594990'); downlevelDiv.innerHTML = " 
-      
-      <div>
-        <object width=\"448\" height=\"252\"><param name=\"movie\" value=\"http://www.youtube.com/v/OAyUNI3_V2c?hl=en&hd=1\"><\/param><embed src=\"http://www.youtube.com/v/OAyUNI3_V2c?hl=en&hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"><\/embed><\/object><\/div>&#8220;;&#8221; alt=&#8221;&#8221;></a>
-      </div></div> </div> 
-      
-      <p>
-        One thing is clear: Google won't have to translate &#8220;+1&#8221; when it will localize the service, but it will have a hard time translating &#8220;+1's&#8221;, &#8220;+1'd&#8221; and other cryptic constructs. Google +1's URLs already look weird (here's the homepage: <a href="http://www.google.com/+1">http://www.google.com/+1</a>).
-      </p>
-      
-      <p>
-        Your +1's are listed in <a href="https://profiles.google.com/me/plusones">a profile tab</a>, where you can manage them. There's also <a href="https://profiles.google.com/+1/personalization/">a page</a> that lets you disable personalizing Google ads using +1's and other information from your Google profile.
-      </p>
-      
-      <p>
-        Google now has the most important pieces of a social network (profiles, activity stream, likes, apps), but there's still no social network, no magic &#8220;glue&#8221; that connects the existing pieces. As <a href="http://searchengineland.com/meet-1-googles-answer-to-the-facebook-like-button-70569">Danny Sullivan explains</a>, the &#8220;+1 social network&#8221; is made up of your Google Talk friends, the people from Gmail's &#8220;My contacts&#8221; group and the people you follow in Google Reader and Google Buzz, but you'll soon be able to connect other services like Twitter and Flickr. It's actually a meta social network, an artificial service that won't have too many enthusiastic users, just like <a href="http://www.google.com/friendconnect">Friend Connect</a>.
-      </p>
+{{< youtube OAyUNI3_V2c >}}
+
+One thing is clear: Google won't have to translate &#8220;+1&#8221; when it will localize the service, but it will have a hard time translating &#8220;+1's&#8221;, &#8220;+1'd&#8221; and other cryptic constructs. Google +1's URLs already look weird (here's the homepage: [http://www.google.com/+1](http://www.google.com/+1)).
+
+Your +1's are listed in [a profile tab](https://profiles.google.com/me/plusones), where you can manage them. There's also [a page](https://profiles.google.com/+1/personalization/) that lets you disable personalizing Google ads using +1's and other information from your Google profile.
+
+Google now has the most important pieces of a social network (profiles, activity stream, likes, apps), but there's still no social network, no magic &#8220;glue&#8221; that connects the existing pieces. As [Danny Sullivan explains](http://searchengineland.com/meet-1-googles-answer-to-the-facebook-like-button-70569), the &#8220;+1 social network&#8221; is made up of your Google Talk friends, the people from Gmail's &#8220;My contacts&#8221; group and the people you follow in Google Reader and Google Buzz, but you'll soon be able to connect other services like Twitter and Flickr. It's actually a meta social network, an artificial service that won't have too many enthusiastic users, just like [Friend Connect](http://www.google.com/friendconnect).
