--- a/content/posts/2016-08-18-oi.de.md
+++ b/content/posts/2016-08-18-oi.de.md
@@ -19,7 +19,7 @@ category: entblog
 
 **Ace** ist das achtzehnte Studioalbum der deutschen Band Scooter, das am 5. Februar 2016 über Sheffield Tunes & Kontor Records veröffentlicht wurde, gefolgt von der ersten Single „Riot“ am 4. September 2015, der zweiten Single „Oi“ am 5. Februar 2016 und der dritten Single „Mary Got No Lamb“, die am 6. Mai 2016 veröffentlicht wurde.
 
-{% include video id="7aRbQKUJPA8" provider="youtube" %}
+{{< youtube 7aRbQKUJPA8 >}}
 
 Oi, oi, oi, fucking oi  
 Oi, oi, oi, fucking oi  
