cleanup more html files

--- a/content/posts/2010-01-06-antivirus-pc-2009.en.md
+++ b/content/posts/2010-01-06-antivirus-pc-2009.en.md
@@ -29,5 +29,5 @@ Antivirus PC 2009 will try to trick people into thinking that their PC is infect
 </div>
 
 <div>
-  if your windows is infected with this malware, you should remove it soon, <a href="http://sites.google.com/site/boelectronic/computer/security/virus-removing">Click Here</a> to learn how to remove it.
+  if your windows is infected with this malware, you should remove it soon, <a href="/knowledge-base/malware-removal/">Click Here</a> to learn how to remove it.
 </div>
