cleanup more html markdown

--- a/content/posts/2010-01-06-antivirus-pc-2009.en.md
+++ b/content/posts/2010-01-06-antivirus-pc-2009.en.md
@@ -13,21 +13,8 @@ category: techblog
 ---
 Antivirus PC 2009 is the latest rogue security software to hit the internet. Antivirus PC 2009 is a complete scam designed to harass PC users into buying the corrupt software.
 
-<div>
-</div>
-
-<div>
-  <a href="http://4.bp.blogspot.com/_vaUVXcmC3OI/S0SMUWb4m2I/AAAAAAAAAjY/W5UTi_PLdWM/s1600-h/AntivirusPC2009_GUI.jpg" imageanchor="1"><img border="0" src="http://4.bp.blogspot.com/_vaUVXcmC3OI/S0SMUWb4m2I/AAAAAAAAAjY/W5UTi_PLdWM/s640/AntivirusPC2009_GUI.jpg" /></a>
-</div>
-
-<div>
-</div>
+[![](http://4.bp.blogspot.com/_vaUVXcmC3OI/S0SMUWb4m2I/AAAAAAAAAjY/W5UTi_PLdWM/s640/AntivirusPC2009_GUI.jpg)](http://4.bp.blogspot.com/_vaUVXcmC3OI/S0SMUWb4m2I/AAAAAAAAAjY/W5UTi_PLdWM/s1600-h/AntivirusPC2009_GUI.jpg)
 
 Antivirus PC 2009 will try to trick people into thinking that their PC is infected with malware and recommends purchase or registering the software to remove the malware. Antivirus PC 2009 will show false scan results that report numerous infections. Antivirus PC 2009 will also display annoying popups and system alerts that stat the PC is infected, under attack or not protected with antivirus software and recommends buying Antivirus PC 2009. Antivirus PC 2009 will also prevent other programs from opening, even the web browser making it impossible to use the internet, rendering the PC nearly useless.
 
-<div>
-</div>
-
-<div>
-  if your windows is infected with this malware, you should remove it soon, <a href="/knowledge-base/malware-removal/">Click Here</a> to learn how to remove it.
-</div>
+if your windows is infected with this malware, you should remove it soon, [Click Here](/knowledge-base/malware-removal/) to learn how to remove it.
