--- a/content/posts/2010-01-06-glike-not.en.md
+++ b/content/posts/2010-01-06-glike-not.en.md
@@ -16,55 +16,18 @@ This is an interesting sample, caught by our honeypots.
 
 The file comes as a zip archive from qtpom{removed}.tripod.com/codec.zip, which once extracted looks like this:
 
-<div>
-  <a href="http://1.bp.blogspot.com/_vaUVXcmC3OI/S0SNHUjJUVI/AAAAAAAAAjg/zWivhd3HDNc/s1600-h/codex.png" imageanchor="1"><img border="0" src="http://1.bp.blogspot.com/_vaUVXcmC3OI/S0SNHUjJUVI/AAAAAAAAAjg/zWivhd3HDNc/s640/codex.png" /></a>
-</div>
+![](/images/2010/01/codex.png)
 
-It is almost undetected. Virus Total report [here](http://www.virustotal.com/analisis/bb6dbf7d160117c8811bc736838fc97936b3e8d4a32fe5136fafdb6f25eafe22-1262302661).  
-Truth be told, no blatant sign of malware activity is noticed at first until this:
+It is almost undetected. Virus Total report [here](http://www.virustotal.com/analisis/bb6dbf7d160117c8811bc736838fc97936b3e8d4a32fe5136fafdb6f25eafe22-1262302661). Truth be told, no blatant sign of malware activity is noticed at first until this:
 
-<a name="more"></a>
+![](/images/2010/01/g5.png)
 
-<div>
-  <a href="http://4.bp.blogspot.com/_vaUVXcmC3OI/S0SNIKdlXvI/AAAAAAAAAjo/Uk72n7SjqHc/s1600-h/g5.png" imageanchor="1"><img border="0" src="http://4.bp.blogspot.com/_vaUVXcmC3OI/S0SNIKdlXvI/AAAAAAAAAjo/Uk72n7SjqHc/s640/g5.png" /></a>
-</div>
+What the heck? This is not my Google home page. And what are those tabs up there: “Pharmacy”, “Casino”?
 
-<div>
-</div>
+The malware modifies the Windows hosts file to redirect popular sites to glike.net (IP: 92.241.164.9, Russian Federation).
 
-<div>
-  <div>
-    What the heck? This is not my Google home page. And what are those tabs up there: “Pharmacy”, “Casino”?
-  </div>
-  
-  <div>
-  </div>
-  
-  <div>
-    The malware modifies the Windows hosts file to redirect popular sites to glike.net (IP: 92.241.164.9, Russian Federation).
-  </div>
-  
-  <div>
-  </div>
-  
-  <div>
-    If you are a victim of a homepage hijack or other redirections, it’s always worth it to try to look at your Hosts file located under C:\windows\system32\drivers\etc\hosts
-  </div>
-  
-  <div>
-  </div>
-  
-  <div>
-    Then, you can remove the offending entries manually and save the file. This may be a temporary relief but not a definite solution if malware is still active on your PC.
-  </div>
-  
-  <div>
-    <a href="http://4.bp.blogspot.com/_vaUVXcmC3OI/S0SNIzO-tzI/AAAAAAAAAjw/kec6R9_WdMU/s1600-h/ips.png" imageanchor="1"><img border="0" src="http://4.bp.blogspot.com/_vaUVXcmC3OI/S0SNIzO-tzI/AAAAAAAAAjw/kec6R9_WdMU/s640/ips.png" /></a>
-  </div>
-  
-  <div>
-  </div>
-  
-  <div>
-  </div>
-</div>
+If you are a victim of a homepage hijack or other redirections, it’s always worth it to try to look at your Hosts file located under C:\\windows\\system32\\drivers\\etc\\hosts
+
+Then, you can remove the offending entries manually and save the file. This may be a temporary relief but not a definite solution if malware is still active on your PC.
+
+![](/images/2010/01/ips.png)
