cleanup more html from markdowns

--- a/content/posts/2016-08-18-oi.en.md
+++ b/content/posts/2016-08-18-oi.en.md
@@ -15,7 +15,9 @@ tags:
 lang: en
 category: entblog
 ---
-**<img class="alignright size-thumbnail wp-image-492" src="/images/2016/08/Scooter_Ace-150x150.jpg" alt="Scooter Ace Album Cover" width="150" height="150" srcset="/images/sites/4/2016/08/Scooter_Ace-150x150.jpg 150w, /images/sites/4/2016/08/Scooter_Ace-300x300.jpg 300w, /images/sites/4/2016/08/Scooter_Ace.jpg 336w" sizes="(max-width: 150px) 100vw, 150px" />Ace** is the eighteenth studio album by German band Scooter released on 5 February 2016 through Sheffield Tunes & Kontor Records, preceded by the first single “Riot” on 4 September 2015, second single “Oi” was released on 5 February 2016, and the third single “Mary Got No Lamb” which was released on 6 May 2016.
+![Scooter Ace Album Cover](/images/2016/08/Scooter_Ace-150x150.jpg)
+
+**Ace** is the eighteenth studio album by German band Scooter released on 5 February 2016 through Sheffield Tunes & Kontor Records, preceded by the first single “Riot” on 4 September 2015, second single “Oi” was released on 5 February 2016, and the third single “Mary Got No Lamb” which was released on 6 May 2016.
 
 {{< youtube 7aRbQKUJPA8 >}}
 
