fix old posts format

--- a/content/posts/2008-07-03-coldplay.en.md
+++ b/content/posts/2008-07-03-coldplay.en.md
@@ -11,7 +11,9 @@ tags:
 lang: en
 category: entblog
 ---
-  **[![coldplay3](/images/2008/07/coldplay3-300x181.jpg)](/images/2008/07/coldplay3.jpg)Coldplay** are an alternative rock band formed in London, England in 1997. The group comprises vocalist/pianist/guitarist Chris Martin, lead guitarist Jonny Buckland, bassist Guy Berryman, and drummer/multi-instrumentalist Will Champion. Coldplay have sold 32.5 million albums, and are also known for their hit singles, such as “Yellow”, “The Scientist”, “Speed of Sound”, “Fix You”, “Viva la Vida” and the Grammy Award-winning “Clocks”.
+[![coldplay3](/images/2008/07/coldplay3-300x181.jpg)](/images/2008/07/coldplay3.jpg)
+
+**Coldplay** are an alternative rock band formed in London, England in 1997. The group comprises vocalist/pianist/guitarist Chris Martin, lead guitarist Jonny Buckland, bassist Guy Berryman, and drummer/multi-instrumentalist Will Champion. Coldplay have sold 32.5 million albums, and are also known for their hit singles, such as “Yellow”, “The Scientist”, “Speed of Sound”, “Fix You”, “Viva la Vida” and the Grammy Award-winning “Clocks”.
 
 Coldplay achieved worldwide fame with the release of their single “Yellow”, followed by their debut album, _Parachutes_ (2000), which was nominated for the Mercury Prize. Its follow-up, _A Rush of Blood to the Head_ (2002), was named _NME'_s Album of the Year. Their next release, _X&Y_ (2005), received a generally positive reception. The band's fourth studio album, _Viva la Vida or Death and All His Friends_ (2008), was produced by Brian Eno and released again to largely favourable reviews. All of Coldplay's albums have enjoyed great commercial success.
 
