--- a/content/posts/2008-07-03-fergie.en.md
+++ b/content/posts/2008-07-03-fergie.en.md
@@ -13,7 +13,9 @@ lang: en
 category: entblog
 ---
 
-**[![fergie-tiara](/images/2008/07/fergie-tiara-300x252.jpg)](/images/2008/07/fergie-tiara.jpg) Stacy Ann Ferguson** (born March 27, 1975), better known by her stage name **Fergie**, is an American pop/R&B singer-songwriter, actress, and rapper. She is a former member of the kids' television series _Kids Incorporated_, and the girl group Wild Orchid. Ferguson was also a co-host of the television show _Great Pretenders_. She is currently a vocalist for the hip hop/pop group the Black Eyed Peas, as well as a solo artist, releasing her debut album, _The Dutchess_, in 2006. The album has so far spawned three U.S. _Billboard_ Hot 100 number one singles and five Top 5 hits, making _The Dutchess_ the seventh album from a female artist to spawn five Top 5 hits.
+[![fergie-tiara](/images/2008/07/fergie-tiara-300x252.jpg)](/images/2008/07/fergie-tiara.jpg) 
+
+**Stacy Ann Ferguson** (born March 27, 1975), better known by her stage name **Fergie**, is an American pop/R&B singer-songwriter, actress, and rapper. She is a former member of the kids' television series _Kids Incorporated_, and the girl group Wild Orchid. Ferguson was also a co-host of the television show _Great Pretenders_. She is currently a vocalist for the hip hop/pop group the Black Eyed Peas, as well as a solo artist, releasing her debut album, _The Dutchess_, in 2006. The album has so far spawned three U.S. _Billboard_ Hot 100 number one singles and five Top 5 hits, making _The Dutchess_ the seventh album from a female artist to spawn five Top 5 hits.
 
 #### Biography
 
