--- a/content/posts/2008-07-03-coldplay.en.md
+++ b/content/posts/2008-07-03-coldplay.en.md
@@ -9,7 +9,8 @@ tags:
   - ColdPlay
   - Music
 lang: en
-category: entblog
+category: 
+  - entblog
 ---
 [![coldplay3](/images/2008/07/coldplay3-300x181.jpg)](/images/2008/07/coldplay3.jpg)
 
