--- a/content/posts/2008-07-03-fergie.en.md
+++ b/content/posts/2008-07-03-fergie.en.md
@@ -10,7 +10,8 @@ tags:
   - Fergie
   - Music
 lang: en
-category: entblog
+category: 
+  - entblog
 ---
 
 [![fergie-tiara](/images/2008/07/fergie-tiara-300x252.jpg)](/images/2008/07/fergie-tiara.jpg) 
