--- a/content/posts/2008-07-16-kid-rock.en.md
+++ b/content/posts/2008-07-16-kid-rock.en.md
@@ -10,7 +10,8 @@ tags:
   - Kid Rock
   - Music
 lang: en
-category: entblog
+category: 
+  - entblog
 ---
 [![kid_rock_0320](/images/2008/07/kid_rock_0320-300x273.jpg)](/images/2008/07/kid_rock_0320.jpg) 
 
