--- a/content/posts/2008-09-27-korn.en.md
+++ b/content/posts/2008-09-27-korn.en.md
@@ -10,7 +10,8 @@ tags:
   - Music
   - Korn
 lang: en
-category: entblog
+category: 
+  - entblog
 ---
 [![korn-l_t350](/images/2013/03/korn-l_t350_thumb.jpg "korn-l_t350")](/images/2013/03/korn-l_t350.jpg)
 
