--- a/content/posts/2016-08-18-oi.en.md
+++ b/content/posts/2016-08-18-oi.en.md
@@ -13,7 +13,8 @@ tags:
   - Scooter
   - Music
 lang: en
-category: entblog
+category: 
+  - entblog
 ---
 ![Scooter Ace Album Cover](/images/2016/08/Scooter_Ace-150x150.jpg)
 
