fix broken link

--- a/content/posts/2011-01-02-removal.en.md
+++ b/content/posts/2011-01-02-removal.en.md
@@ -14,7 +14,7 @@ lang: en
 categories: 
   - techblog
 ---
-> If after following this guide you failed disinfecting your computer, or you cannot follow this guide yourself, [I will be available to help you]({{< ref "/contact-me" >}}).
+> If after following this guide you failed disinfecting your computer, or you cannot follow this guide yourself, [I will be available to help you](/contact-me).
 
 The most important thing in fighting malwares is:
 
