--- a/content/posts/2011-01-02-removal.en.md
+++ b/content/posts/2011-01-02-removal.en.md
@@ -4,7 +4,7 @@ date: 2011-01-02T23:55:43+03:30
 layout: single
 author_profile: true
 url: 2011/01/02/malware-removal-guide-for-Windows/
-shortlink: https://g.omid.dev/r0QrWud
+shortlink: https://g.omid.dev/2PJadh8
 tags:
   - How to
   - Windows
