--- a/content/posts/2009-01-13-tfc.en.md
+++ b/content/posts/2009-01-13-tfc.en.md
@@ -4,6 +4,7 @@ date: 2009-01-13T23:56:43+03:30
 layout: single
 author_profile: true
 url: 2009/01/13/tfc/
+shortlink: https://g.omid.dev/Wc0IA1S
 tags:
   - Apps
   - Windows Apps
