--- a/content/posts/2009-01-13-spam.en.md
+++ b/content/posts/2009-01-13-spam.en.md
@@ -4,6 +4,7 @@ date: 2009-01-13T23:50:43+03:30
 layout: single
 author_profile: true
 url: 2009/01/13/spam/
+shortlink: https://g.omid.dev/6xReMc6
 tags:
   - spam
   - Security
