--- a/content/posts/2008-09-27-korn.en.md
+++ b/content/posts/2008-09-27-korn.en.md
@@ -3,7 +3,7 @@ title: KoЯn
 date: 2008-09-27T11:09:48+00:00
 layout: single
 author_profile: true
-permalink: '/2008/09/27/korn/'
+url: 2008/09/27/korn/
 shortlink: https://g.omid.dev/1LmO862
 image: /images/sites/4/2013/03/korn-l_t350.jpg
 tags:
