--- a/content/posts/2024/2024-05-28-docker.en.md
+++ b/content/posts/2024/2024-05-28-docker.en.md
@@ -137,36 +137,39 @@ Docker Compose is a tool that allows you to define and manage multi-container Do
 2. **Create a `docker-compose.yml` File**:
 
    ```yaml
-   version: '3.8'
-
-   services:
-     db:
-       image: mysql:5.7
-       volumes:
-         - db_data:/var/lib/mysql
-       restart: always
-       environment:
-         MYSQL_ROOT_PASSWORD: somewordpress
-         MYSQL_DATABASE: wordpress
-         MYSQL_USER: wordpress
-         MYSQL_PASSWORD: wordpress
-
-     wordpress:
-       image: wordpress:latest
-       volumes:
-         - wordpress_data:/var/www/html
-       ports:
-         - "8000:80"
-       restart: always
-       environment:
-         WORDPRESS_DB_HOST: db:3306
-         WORDPRESS_DB_USER: wordpress
-         WORDPRESS_DB_PASSWORD: wordpress
-         WORDPRESS_DB_NAME: wordpress
-
-   volumes:
-     db_data:
-     wordpress_data:
+    services:
+      db:
+        # We use a mariadb image which supports both amd64 & arm64 architecture
+        image: mariadb:10.6.4-focal
+        # If you really want to use MySQL, uncomment the following line
+        #image: mysql:8.0.27
+        command: '--default-authentication-plugin=mysql_native_password'
+        volumes:
+          - db_data:/var/lib/mysql
+        restart: always
+        environment:
+          - MYSQL_ROOT_PASSWORD=somewordpress
+          - MYSQL_DATABASE=wordpress
+          - MYSQL_USER=wordpress
+          - MYSQL_PASSWORD=wordpress
+        expose:
+          - 3306
+          - 33060
+      wordpress:
+        image: wordpress:latest
+        volumes:
+          - wp_data:/var/www/html
+        ports:
+          - 8000:80
+        restart: always
+        environment:
+          - WORDPRESS_DB_HOST=db
+          - WORDPRESS_DB_USER=wordpress
+          - WORDPRESS_DB_PASSWORD=wordpress
+          - WORDPRESS_DB_NAME=wordpress
+    volumes:
+      db_data:
+      wp_data:
    ```
 
 3. **Run Docker Compose**:
@@ -183,8 +186,8 @@ Docker Compose is a tool that allows you to define and manage multi-container Do
 ### Explanation of `docker-compose.yml`
 
 - **version**: Specifies the Docker Compose file format version.
-- **services**: Defines the two services: `db` (MySQL database) and `wordpress` (WordPress application).
-  - **db** service uses the MySQL 5.7 image, with environment variables for database setup.
+- **services**: Defines the two services: `db` (database) and `wordpress` (WordPress application).
+  - **db** service uses the Mariadb 10.6.4 image, with environment variables for database setup.
   - **wordpress** service uses the latest WordPress image and links it to the `db` service.
 - **volumes**: Creates persistent storage for both the database and WordPress files, ensuring data is retained between container restarts.
 
