fix url and shorturl

--- a/content/posts/2024/2024-06-13-jobs.en.md
+++ b/content/posts/2024/2024-06-13-jobs.en.md
@@ -3,8 +3,8 @@ title: 'Why Good Developers Can't Find Jobs and How to Turn the Tide'
 date: 2024-06-13T01:45:03+03:30
 layout: single
 author_profile: true
-url: 2024/06/13/building-high-performance-web-applications-leveraging-webassembly-and-rust/
-shortlink: https://g.omid.dev/cNls8Ve
+url: 2024/06/13/why-good-developers-cant-find-jobs/
+shortlink: https://g.omid.dev/7mXfUuc
 tags:
   - Jobs
   - Hints
