--- a/content/posts/2010/2010-03-18-irogue.en.md
+++ b/content/posts/2010/2010-03-18-irogue.en.md
@@ -14,7 +14,7 @@ lang: en
 categories: 
   - techblog
 ---
-<span><span><b>Are Mac OS X rogues an emerging threat?</b></span></span>
+**Are Mac OS X rogues an emerging threat?**
 
 For many years discussions of the potential for malware on Macs have ended with the conclusion: “there isn’t much yet, but as soon as Mac gets a big market share the dark side is going to start writing the code.” There are indications that the bad guys are working on it.
 
