--- a/themes/PaperMod/i18n/de.yaml
+++ b/themes/PaperMod/i18n/de.yaml
@@ -31,3 +31,9 @@
 
 - id: code_copied
   translation: "Kopiert!"
+
+- id: share_my_post
+  translation: "Meinen Beitrag teilen"
+
+- id: continue_reading
+  translation: "Weiterlesen"
