--- a/themes/PaperMod/i18n/en.yaml
+++ b/themes/PaperMod/i18n/en.yaml
@@ -31,3 +31,9 @@
 
 - id: code_copied
   translation: "copied!"
+
+- id: share_my_post
+  translation: "Share My Post"
+
+- id: continue_reading
+  translation: "Continue Reading"
