--- a/themes/PaperMod/i18n/en.yaml
+++ b/themes/PaperMod/i18n/en.yaml
@@ -37,3 +37,12 @@
 
 - id: continue_reading
   translation: "Continue Reading"
+
+- id: recent_posts
+  translation: "Recent Posts"
+
+- id: contact
+  translation: "Contact"
+
+- id: quick_links
+  translation: "Quick Links"
