--- a/content/posts/electronics/2024/2024-09-05-old-radio.fa.md
+++ b/content/posts/electronics/2024/2024-09-05-old-radio.fa.md
@@ -14,7 +14,7 @@ tags:
   - اینترنت اشیا
 lang: fa
 categories: 
-  - الکترونیک
+  - Electronics
 ---
 جذابیت منحصر به فردی در لوازم الکترونیکی قدیمی وجود دارد که دستگاه‌های مدرن اغلب فاقد آن هستند. چه صدای کلیک رضایت‌بخش یک کلید مکانیکی باشد، چه درخشش گرم یک نمایشگر آنالوگ، یا زمزمه نوستالژیک یک رادیوی قدیمی، این گجت‌های کلاسیک خاطرات دوران گذشته را زنده می‌کنند. با این حال، هر چقدر هم که ما این دستگاه‌های قدیمی را دوست داشته باشیم، زمان با آن‌ها مهربان نبوده است. قطعات فرسوده می‌شوند، بخش‌ها کمیاب می‌شوند و بسیاری از این گجت‌ها در اتاق‌های زیرشیروانی و زیرزمین‌ها خاک می‌خورند. اما چه می‌شود اگر بتوانیم جانی تازه به این گنجینه‌های قدیمی ببخشیم؟ با ترکیب تخصص قدیمی و فناوری مدرن، می‌توانیم این دستگاه‌های کلاسیک را بازسازی و حتی تقویت کنیم و میراث آن‌ها را برای نسل‌های آینده حفظ کنیم.
 
