--- a/themes/omid-dev/i18n/de.yaml
+++ b/themes/omid-dev/i18n/de.yaml
@@ -89,6 +89,15 @@
 - id: search
   translation: "Suche"
 
+- id: page_not_found
+  translation: "Hoppla! Die Seite, die Sie suchen, existiert nicht."
+
+- id: 404_recent_posts_title
+  translation: "Vielleicht haben Sie nach einem dieser Beiträge gesucht?"
+
+- id: 404_hacked
+  translation: "GEHACKT!"
+
 - id: follow_me
   translation: "Folge mir"
 
